--- a/src/components/billingCycles/BillingCycle.css
+++ b/src/components/billingCycles/BillingCycle.css
@@ -2,6 +2,20 @@
     padding: 30px;
 }
 
+
 .bc-actions .btn{
     margin: 8px;
+}
+
+td > .form-control {
+    width: 55%;
+    height: 45%;
+}
+
+td {
+    width: 30%;
+}
+
+.item-list-column > input[type=number] {
+    width: 35%;
 }
